--- a/components/pages/landing/turbohero-background.module.css
+++ b/components/pages/landing/turbohero-background.module.css
@@ -7,8 +7,8 @@
 }
 
 .lines {
-  --right: #f8cde8;
-  --left: #b9ddff;
+  --right: #0A60FF; /* Portal Blue: A vibrant, medium blue */
+  --left: #0A60FF; /* Aperture Grey: A medium-dark grey */
   position: absolute;
   width: 200vw;
   margin-left: -50%;
@@ -45,7 +45,7 @@
 }
 
 :global(.dark) .lines {
-  --right: #4c2638;
+  --right: #450009;
   --left: #223b67;
 }
 
